Setup initial links and fields with player color differentiation

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype html
 html
   head
     title= title
-    script(src="/public/js/phaser.min.js")
+    script(src="/js/phaser.min.js")
   body
     
