Added several UI actions, such a basic HUD, basic scoreboard, and basic controls

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,6 @@ html
         transform: translate(-50%, -50%);
       }
   body
-    script(src="/js/network.js")
-    script(src="/js/display.js")
+    script(src="/js/global.js")
+    script(src="/js/bundle.js")
     
