--- a/views/index.jade
+++ b/views/index.jade
@@ -81,7 +81,7 @@ html
             button(type="button", class="btn btn-info upload-submit") Upload
             
     div
-      h1 Soveriegn Oversight
+      h1 Sovereign Oversight
       
       
       div(class="row")
