Got a bit carried away... Energy display, control page, leave games, bug fixes

--- a/views/room.jade
+++ b/views/room.jade
@@ -44,6 +44,34 @@ html
               div(class="col-sm-1", id="colorview", height="10em")
           div(class="modal-footer")
             button(type="button", class="btn btn-info", id="join-submit") Join
+            
+    div(id="info", class="modal fade", role="dialog")
+      div(class="modal-dialog")
+        div(class="modal-content")
+          div(class="modal-header")
+            div(class="row")
+              div(class="col-sm-6")
+                h4(class="modal-title") Sovereign Oversight
+              div(class="col-sm-3")
+                button(type="button", class="btn btn-danger", id="leave") Leave Game
+              div(class="col-sm-3")
+                button(type="button", class="btn btn-info", id="download") Download Game
+          div(class="modal-body")
+            h4 Background
+            p This is an online-multiplayer strategy game focused on capturing and controlling various areas within the game map. These captured zones are used to generate energy for the player each turn--the larger the area, the more energy the player earns. Zones are created by linking transmitters together to form a triangle, and all area within the triangle becomes captured. Players can create transmitters and links each turn, but at the cost of energy. By performing actions, like placing transmitters or capturing areas, a player earns experience, which is used to level up and unlock things like more energy storage. Once the player reaches level 8, they win the game.
+            
+            h4 Controls and Specifics
+            h6 Moving around the map:
+            ul
+              li Hold down right-click and use the mouse to drag the map around
+              li Use the '+' and '-' to zoom in and out of the map
+            h6 Turn actions:
+            ul
+              li Press 'T' to start placing a transmitter. Then click to lock it into place. This costs 128 Energy and grants you 128XP
+              li Press 'L' to form a link between two transmitters. Just click on the first transmitter and then one you want to link it with. The links you create are limited in length based on your level. Also, you can't link transmitters placed that turn. This cost 256 Energy and grants you 256XP
+              li Press 'D' to delete a transmitter. This can be either yours or another players, and deleting a transmitter removes all links or fields utilizing it. This costs 1024 Energy and gives you 512XP
+          div(class="modal-footer")
+            button(type="button", class="btn btn-danger", data-dismiss="modal") Close
     script(src="/js/global.js")
     script(src="/js/bundle.js")
     
